objects/MedProBT__DesiredField__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>MedProBT__ActiveSync__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ActiveSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProBT__ExternalID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExternalID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProBT__MappingField__c</fullName>
        <label>MappingField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Parent_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProBT__SecondaryMatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SecondaryMatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProBT__UMR_Passthrough__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UMR Passthrough</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProBT__Update_SFDC_with_NULL_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update SFDC with NULL Values</label>
        <type>Checkbox</type>
    </fields>
    <label>MedPro DesiredField</label>
</CustomObject>